# snaplet-assets

./: README.md  snaplet-assets.cabal  stack.yaml
demo/: Application.hs  Site.hs
src/Snap/Snaplet/: Assets.hs
src/Snap/Snaplet/Assets/: API.hs  Types.hs  Utils.hs
src/Snap/Snaplet/Assets/Handlers/: CSS.hs  JS.hs
