name:               snaplet-assets
version:            0.1.0.0
synopsis:           Assets management for Snap framework
-- description:
-- license:            AllRightsReserved
-- license-file:       LICENSE
author:             Jude Taylor <me@jude.bio>
maintainer:         Franco Lucchini <flucchini@gmail.com>
-- copyright:
category:           Network
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.10

library
  ghc-options:      -Wall
  hs-source-dirs:   src

  exposed-modules:
                    Snap.Snaplet.Assets

  other-modules:
                    Snap.Snaplet.Assets.API
                    Snap.Snaplet.Assets.Handlers.CSS
                    Snap.Snaplet.Assets.Handlers.JS
                    Snap.Snaplet.Assets.Types
                    Snap.Snaplet.Assets.Utils

  build-depends:      base >=4.8
                    , snap
                    , snap-core
                    , map-syntax
                    , containers
                    , bytestring
                    , network-uri
                    , text
                    , directory
                    , filepath
                    , process-extras
                    , xmlhtml
                    , path-pieces
                    , cryptohash
                    , heist
                    , lens
                    , configurator

  default-language: Haskell2010

